Update azure-pipelines-2.yml for Azure Pipelines

--- a/azure-pipelines-2.yml
+++ b/azure-pipelines-2.yml
@@ -32,6 +32,7 @@ jobs:
 - job: manualValidation
   displayName: manual validation
   pool: server
+  dependsOn: test
   steps:
   - task: ManualValidation@1
     inputs:
